--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Glavin001/react-hot-ts.git"
+    "url": "git+https://github.com/DavidDudson/willitricochet.git"
   },
-  "author": "Glavin Wiechert",
+  "author": "David Dudson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Glavin001/react-hot-ts/issues"
+    "url": "https://github.com/DavidDudson/willitricochet/issues"
   },
-  "homepage": "https://github.com/Glavin001/react-hot-ts#readme"
+  "homepage": "https://github.com/DavidDudson/willitricochet#readme"
 }
