--- a/package.json
+++ b/package.json
@@ -4,11 +4,22 @@
   "description": "Demo of React Hot Reloading + TypeScript",
   "main": "./dist/bundle.js",
   "dependencies": {
+    "@types/immutable": "^3.8.7",
+    "@types/radium": "^0.18.21",
+    "@types/react-redux": "^4.4.44",
+    "@types/react-router": "^4.0.11",
+    "@types/redux": "^3.6.0",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
+    "immutable": "^3.8.1",
     "node-static": "^0.7.9",
+    "radium": "^0.19.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-foundation": "^0.8.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "redux": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^15.0.24",
