--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@types/react-dom": "^15.5.0",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
+    "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "typescript": "^2.3.3",
-    "webpack": "^2.6.0",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
