--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.4",
+    "foundation-sites": "^6.4.0-rc4",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
