--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutable": "^3.8.1",
     "node-static": "^0.7.9",
     "radium": "^0.19.1",
+    "radium-normalize": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-foundation": "^0.8.0",
