--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/webpack-env": "^1.13.0",
+    "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.4",
     "foundation-sites": "^6.4.0-rc4",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
